--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,8 +2,11 @@
 
 <a href="/pushup">PushUp</a>
 
-<div>User:{{user.displayName}}</div>
-<div>is authoricated:{{auth}}</div>
+<div>{{user.displayName}}</div>
+
+<div>
+    <img src="{{user.photo}}"/>
+</div>
 
 {{#if user}}
     <div class="user-card">
@@ -18,3 +21,5 @@
 <div>
     <a href="/auth/logout">Logout</a>
 </div>
+
+<button>asdf</button>
